Changelog for GEMC
==================

5/12/16
 - luminosity raster:
	- fixed bug that affect radius of distribution
	- number of total particles will match the LUMI option (last bunch may have more particles)
	- distribution has uniform density

5/11/16
 - S\. Pisano: new RICH process digitization routine.
 - A\. Filippi: new option FORCE_MUON_RADIATIVE_DECAY to force muons to decay in the radiative channel::

	With force radiative decay = 0 (default)
	BR(mu->e+nu+antinu) = 98.6%
	BR(mu->e+nu+antinu+gamma) = 1.4%
	muon spin neglected
	These are the GEANT4 standard em model defaults

	With force radiative decay = 1 (or different from zero)
	BR(mu-> e+nu+antinu+gamma) = 100%
	muon spin (V-A) decay included


5/6/16
 - Field map properties are now being set in the gcard / command line option::

    > FIELD_PROPERTIES: Mapped field minimum step, integration method, interpolation

    Usage:
    -FIELD_PROPERTIES="fieldname, minStep, integralAlgorithm, (interpolationMethod)"

    Example: -FIELD_PROPERTIES="srr-solenoid, 1*mm, G4ClassicalRK4, linear"

    Available Intergration Methods:
    - G4CashKarpRKF45: Fifth Order Range Kutta, for very smooth fields.
    - G4ClassicalRK4: Fourth Order Range Kutta. Robust for every field.
    - G4SimpleHeum: Third order stepper.
    - G4SimpleRunge: Simplified (second order) Range Kutta (faster).
    - G4ImplicitEuler: Second order stepper, for faster varying fields.
    - G4ExplicitEuler: First order stepper, for rough fields.
    - G4HelixImplicitEuler: Second order, specialized for helix-like trakectories.
    - G4HelixExplicitEuler: First order, specialized for helix-like trakectories.
    - G4HelixSimpleRunge: Second order Range Kutta, specialized for helix-like trakectories.
    - G4NystromRK4: provides accuracy near that of G4ClassicalRK4 with a significantly
      reduced cost in field evaluation.

    Available Interpolation Methods:
    - none: closest grid point.
    - linear: linear interpolation.
